--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>Lauren is currently learning how to become a Data Scientist through FlatIron's full time bootcamp.</p>
